5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4176/executions/1594_2043.log
== TEST (2019-03-29 17:09:29) 
-- CODE:
n1= int(input:"Nota1: ")
n2= int(input:"Nota2: ")
n3= int(input:"Nota3: ")
n4= int(input:"Nota4: ")
-- ERROR:
File "XXXX", line 1
    n1= int(input:"Nota1: ")
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:10:00) 
-- CODE:
n1= int(input("Nota1: ")
n2= int(input("Nota2: ")
n3= int(input("Nota3: ")
n4= int(input("Nota4: ")
-- ERROR:
File "XXXX", line 2
    n2= int(input()
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 17:10:15) 
-- CODE:
n1= int(input("Nota1: ")
n2= int(input("Nota2: ")
n3= int(input("Nota3: ")
n4= int(input("Nota4: ")
-- EXECUTION TIME:
0.217112
-- ERROR:
  File "/home/codebench/codes/1594/2043/main.py", line 2
    n2= int(input()
     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:10:19) 
-- CODE:
n1= int(input("Nota1: ")
n2= int(input("Nota2: ")
n3= int(input("Nota3: ")
n4= int(input("Nota4: ")
-- ERROR:
File "XXXX", line 2
    n2= int(input()
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:10:48) 
-- CODE:
n1= int(float(input("Nota1: ")
n2= int(input("Nota2: ")
n3= int(input("Nota3: ")
n4= int(input("Nota4: ")
-- ERROR:
File "XXXX", line 2
    n2= int(input()
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:11:23) 
-- CODE:
n1= int(input("Nota1: ")
n2= int(input("Nota2: ")
n3= int(input("Nota3: ")
n4= int(input("Nota4: ")
-- ERROR:
File "XXXX", line 2
    n2= int(input()
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:11:55) 
-- CODE:
n1= float(input("Nota1: ")

-- ERROR:
File "XXXX", line 2
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:12:07) 
-- CODE:
n1= int(float(input("Nota1: ")

-- ERROR:
File "XXXX", line 2
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:12:19) 
-- CODE:
n1=input("Nota1: ")

-- ERROR:
File "XXXX", line 2
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:12:36) 
-- CODE:
n1=input(int("Nota1: ")

-- ERROR:
File "XXXX", line 2
    
                           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:13:16) 
-- CODE:
n1= int(input("Nota1: ")

-- ERROR:
File "XXXX", line 2
    
                   ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:13:32) 
-- CODE:
n1=input("Nota1: ")

-- ERROR:
File "XXXX", line 2
    
                   ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:13:56) 
-- CODE:
n1= input("Nota1: ")
n2= int(input("Nota2: ")
n3= int(input("Nota3: ")
n4= int(input("Nota4: ")

-- ERROR:
File "XXXX", line 3
    n3= int(input()
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:14:22) 
-- CODE:
n1= int(input("Nota1: ")
n2= int(input("Nota2: ")
n3= int(input("Nota3: ")
n4= int(input("Nota4: ")

-- ERROR:
File "XXXX", line 2
    n2= int(input()
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:14:59) 
-- CODE:
n1= int(input(print("Nota1: ")


-- ERROR:
File "XXXX", line 3
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:15:03) 
-- CODE:
n1= int(input(print("Nota1: ")


-- ERROR:
File "XXXX", line 3
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:15:17) 
-- CODE:
n1= print(int(input("Nota1: ")


-- ERROR:
File "XXXX", line 3
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:15:49) 
-- CODE:
n1= int(input(round("Nota1: "), 2)


-- ERROR:
File "XXXX", line 3
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:16:09) 
-- CODE:
n1= int(input("Nota1: ")


-- ERROR:
File "XXXX", line 3
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:16:34) 
-- CODE:
n1= float(input("Nota1: ")


-- ERROR:
File "XXXX", line 3
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:16:40) 
-- CODE:
float(input("Nota1: ")


-- ERROR:
File "XXXX", line 3
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:16:48) 
-- CODE:
int(input("Nota1: ")


-- ERROR:
File "XXXX", line 3
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:16:51) 
-- CODE:
int(input("Nota1: ")


-- ERROR:
File "XXXX", line 3
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:16:58) 
-- CODE:
a=int(input("Nota1: ")


-- ERROR:
File "XXXX", line 3
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:17:02) 
-- CODE:
a=int(input("Nota1: ")


-- ERROR:
File "XXXX", line 3
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:17:29) 
-- CODE:
a=int(input("Nota1: ")


-- ERROR:
File "XXXX", line 3
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:17:35) 
-- CODE:
int(input("Nota1: ")


-- ERROR:
File "XXXX", line 3
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:17:45) 
-- CODE:
input("Nota1: ")


-- ERROR:
File "XXXX", line 3
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:18:25) 
-- CODE:
input("Nota1: ")
input("Nota2: ")
input("Nota3: ")
input("Nota4: ")

-- ERROR:
File "XXXX", line 3
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:19:49) 
-- CODE:
input("Nota1: ")
input("Nota2: ")
input("Nota3: ")
input("Nota4: ")

int(input(round(Nota1+Nota2+Nota3+Nota4)/4), 2)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    int(input(round(Nota1+Nota2+Nota3+Nota4)/4), 2)
NameError: name 'Nota1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:20:38) 
-- CODE:
input("Nota1: ")
input("Nota2: ")
input("Nota3: ")
input("Nota4: ")

int(input(round(Nota1+Nota2+Nota3+Nota4)/4), 2)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    int(input(round(Nota1+Nota2+Nota3+Nota4)/4), 2)
NameError: name 'Nota1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:20:58) 
-- CODE:
int(input("Nota1: ")


-- ERROR:
File "XXXX", line 3
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:21:12) 
-- CODE:
float(input("Nota1: ")


-- ERROR:
File "XXXX", line 3
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:21:48) 
-- CODE:
input("Nota1: ">0)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input("Nota1: ">0)
TypeError: '>' not supported between instances of 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:23:23) 
-- CODE:
input("Nota1: ")
input("Nota2: ")
input("Nota3: ")
input("Nota4: ")

int(input(round((Nota1)+(Nota2)*2+(Nota3)*3+(Nota4)*4)/4), 2)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    int(input(round((Nota1)+(Nota2)*2+(Nota3)*3+(Nota4)*4)/4), 2)
NameError: name 'Nota1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 17:23:26) 
-- CODE:
input("Nota1: ")
input("Nota2: ")
input("Nota3: ")
input("Nota4: ")

int(input(round((Nota1)+(Nota2)*2+(Nota3)*3+(Nota4)*4)/4), 2)

-- EXECUTION TIME:
0.187022
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/2043/main.py", line 6, in <module>
    int(input(round((Nota1)+(Nota2)*2+(Nota3)*3+(Nota4)*4)/4), 2)
NameError: name 'Nota1' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:24:05) 
-- CODE:
input("Nota1: ")
input("Nota2: ")
input("Nota3: ")
input("Nota4: ")

int(input(round((Nota1)*1)+(Nota2)*2)+(Nota3)*3)+(Nota4)*4)/4), 2)

-- ERROR:
File "XXXX", line 6
    int(input(round((Nota1)*1)+(Nota2)*2)+(Nota3)*3)+(Nota4)*4)/4), 2)
                                                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:24:47) 
-- CODE:
input("Nota1: ")
input("Nota2: ")
input("Nota3: ")
input("Nota4: ")

media=int(input(round((Nota1)*1+(Nota2)*2+(Nota3)*3+(Nota4)*4)/4), 2)
print(media)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    media=int(input(round((Nota1)*1+(Nota2)*2+(Nota3)*3+(Nota4)*4)/4), 2)
NameError: name 'Nota1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 17:24:50) 
-- CODE:
input("Nota1: ")
input("Nota2: ")
input("Nota3: ")
input("Nota4: ")

media=int(input(round((Nota1)*1+(Nota2)*2+(Nota3)*3+(Nota4)*4)/4), 2)
print(media)

-- EXECUTION TIME:
0.19557
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/2043/main.py", line 6, in <module>
    media=int(input(round((Nota1)*1+(Nota2)*2+(Nota3)*3+(Nota4)*4)/4), 2)
NameError: name 'Nota1' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:25:01) 
-- CODE:
input("Nota1: ")
input("Nota2: ")
input("Nota3: ")
input("Nota4: ")

media=int(input(round((Nota1)*1+(Nota2)*2+(Nota3)*3+(Nota4)*4)/4), 2)
print(media)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    media=int(input(round((Nota1)*1+(Nota2)*2+(Nota3)*3+(Nota4)*4)/4), 2)
NameError: name 'Nota1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:25:26) 
-- CODE:
input("Nota: ")
input("Nota2: ")
input("Nota3: ")
input("Nota4: ")

media=int(input(round((Nota)*1+(Nota2)*2+(Nota3)*3+(Nota4)*4)/4), 2)
print(media)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    media=int(input(round((Nota)*1+(Nota2)*2+(Nota3)*3+(Nota4)*4)/4), 2)
NameError: name 'Nota' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 17:25:30) 
-- CODE:
input("Nota: ")
input("Nota2: ")
input("Nota3: ")
input("Nota4: ")

media=int(input(round((Nota)*1+(Nota2)*2+(Nota3)*3+(Nota4)*4)/4), 2)
print(media)

-- EXECUTION TIME:
0.139483
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/2043/main.py", line 6, in <module>
    media=int(input(round((Nota)*1+(Nota2)*2+(Nota3)*3+(Nota4)*4)/4), 2)
NameError: name 'Nota' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:26:27) 
-- CODE:
input("Nota: ")
input("Nota2: ")
input("Nota3: ")
input("Nota4: ")

media=int(input(round((Nota*1+(Nota2*2)+(Nota3*3)+(Nota4*4)/4), 2)
print(media)

-- ERROR:
File "XXXX", line 7
    print(media)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:26:39) 
-- CODE:
input("Nota: ")
input("Nota2: ")
input("Nota3: ")
input("Nota4: ")

media=int(input(round((Nota*1)+(Nota2*2)+(Nota3*3)+(Nota4*4)/4), 2)
print(media)

-- ERROR:
File "XXXX", line 7
    print(media)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:26:57) 
-- CODE:
input("Nota: ")
input("Nota2: ")
input("Nota3: ")
input("Nota4: ")

media=int(input(round((Nota*1)+(Nota2*2)+(Nota3*3)+(Nota4*4)/4), 2)
int(print(media)

-- ERROR:
File "XXXX", line 7
    int(print(media)
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:27:09) 
-- CODE:
input("Nota: ")
input("Nota2: ")
input("Nota3: ")
input("Nota4: ")

media=int(input(round((Nota*1)+(Nota2*2)+(Nota3*3)+(Nota4*4)/4), 2)
			 print(media)

-- ERROR:
File "XXXX", line 7
    print(media)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:29:23) 
-- CODE:
input("Nota: ")
input("Nota2: ")
input("Nota3: ")
input("Nota4: ")

v1=int(Nota*1)
v2=int(Nota2*2)
v3=int(Nota3*3)
v4=int(Nota4*4)

media=int(round(v1+v2+v3+v4)/4), 4

print(media)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    v1=int(Nota*1)
NameError: name 'Nota' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 17:29:26) 
-- CODE:
input("Nota: ")
input("Nota2: ")
input("Nota3: ")
input("Nota4: ")

v1=int(Nota*1)
v2=int(Nota2*2)
v3=int(Nota3*3)
v4=int(Nota4*4)

media=int(round(v1+v2+v3+v4)/4), 4

print(media)

-- EXECUTION TIME:
0.206694
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/2043/main.py", line 6, in <module>
    v1=int(Nota*1)
NameError: name 'Nota' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:30:31) 
-- CODE:
input("Nota: ")
input("Nota2: ")
input("Nota3: ")
input("Nota4: ")

v1=float(Nota*1)
v2=float(Nota2*2)
v3=float(Nota3*3)
v4=float(Nota4*4)

media=float(round(v1+v2+v3+v4)/4), 4

print(media)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    v1=float(Nota*1)
NameError: name 'Nota' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 17:30:35) 
-- CODE:
input("Nota: ")
input("Nota2: ")
input("Nota3: ")
input("Nota4: ")

v1=float(Nota*1)
v2=float(Nota2*2)
v3=float(Nota3*3)
v4=float(Nota4*4)

media=float(round(v1+v2+v3+v4)/4), 4

print(media)

-- EXECUTION TIME:
0.126988
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/2043/main.py", line 6, in <module>
    v1=float(Nota*1)
NameError: name 'Nota' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:31:08) 
-- CODE:
float(input("Nota: ")
float(input("Nota2: ")
float(input("Nota3: ")
float(input("Nota4: ")

v1=float(Nota*1)
v2=float(Nota2*2)
v3=float(Nota3*3)
v4=float(Nota4*4)

media=float(round(v1+v2+v3+v4)/4), 4

print(media)

-- ERROR:
File "XXXX", line 2
    float(input()
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:32:32) 
-- CODE:
n1=float(input("Nota: ")
n2=float(input("Nota2: ")
n3=float(input("Nota3: ")
n4=float(input("Nota4: ")

v1=float(n1*1)
v2=float(n2*2)
v3=float(n33*3)
v4=float(n4*4)

media=float(round(v1+v2+v3+v4)/4), 4

print(media)

-- ERROR:
File "XXXX", line 2
    n2=float(input()
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:33:52) 
-- CODE:
n1=float(input("Nota: ")
n2=float(input("Nota2: ")
n3=float(input("Nota3: ")
n4=float(input("Nota4: ")

v1=float(n1*1)
v2=float(n2*2)
v3=float(n33*3)
v4=float(n4*4)

media=float(v1+v2+v3+v4)/4)

print(round(media), 4)

-- ERROR:
File "XXXX", line 2
    n2=float(input()
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:34:28) 
-- CODE:
n1=float(input("Nota: ")
print(n1)

-- ERROR:
File "XXXX", line 2
    print(n1)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:34:35) 
-- CODE:
n1=float(input("Nota: ")
print(n1)

-- ERROR:
File "XXXX", line 2
    print(n1)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:35:00) 
-- CODE:
n1=print(float(input("Nota: ")


-- ERROR:
File "XXXX", line 3
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:35:13) 
-- CODE:
n1=float(input("Nota: ")


-- ERROR:
File "XXXX", line 3
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:35:30) 
-- CODE:
n1=float(input("Nota: ")
n2=float(input("Nota2: ")
n3=float(input("Nota3: ")
n4=float(input("Nota4: ")

v1=float(n1*1)
v2=float(n2*2)
v3=float(n3*3)
v4=float(n4*4)

media=float(v1+v2+v3+v4)/4)

print(round(media), 4)


-- ERROR:
File "XXXX", line 2
    n2=float(input()
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:36:12) 
-- CODE:
n1=float(input("Nota: ")
n2=float(input("Nota2: ")
n3=float(input("Nota3: ")
n4=float(input("Nota4: ")

v1=float(n1*1)
v2=float(n2*2)
v3=float(n3*3)
v4=float(n4*4)

print(v1)


-- ERROR:
File "XXXX", line 2
    n2=float(input()
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:37:08) 
-- CODE:
n1=float(input("Nota: ")
n2=float(input("Nota2: ")
n3=float(input("Nota3: ")
n4=float(input("Nota4: ")

v1=float(n1*1)
v2=float(n2*2)
v3=float(n3*3)
v4=float(n4*4)

media=float(v1+v2+v3+v4)/4)

print(round(media), 4)


-- ERROR:
File "XXXX", line 2
    n2=float(input()
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 17:37:10) 
-- CODE:
n1=float(input("Nota: ")
n2=float(input("Nota2: ")
n3=float(input("Nota3: ")
n4=float(input("Nota4: ")

v1=float(n1*1)
v2=float(n2*2)
v3=float(n3*3)
v4=float(n4*4)

media=float(v1+v2+v3+v4)/4)

print(round(media), 4)


-- EXECUTION TIME:
0.152981
-- ERROR:
  File "/home/codebench/codes/1594/2043/main.py", line 2
    n2=float(input()
     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 21:54:12) 
-- CODE:
n1=float(input("NOta1: "))
n2=float(input("NOta2: "))
n3=float(input("NOta3: "))
n4=float(input("NOta4: "))

m1=float(n1*1+n2*2+n3*3+n4*4)

media=float(round(m1/4), 2)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    media=float(round(m1/4), 2)
TypeError: float() takes at most 1 argument (2 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 21:55:03) 
-- CODE:
n1=float(input("NOta1: "))
n2=float(input("NOta2: "))
n3=float(input("NOta3: "))
n4=float(input("NOta4: "))

m1=float(n1*1+n2*2+n3*3+n4*4)

media=float(round(m1/4), 2)

print(media)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    media=float(round(m1/4), 2)
TypeError: float() takes at most 1 argument (2 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 21:56:01) 
-- CODE:
n1=float(input("NOta1: "))
n2=float(input("NOta2: "))
n3=float(input("NOta3: "))
n4=float(input("NOta4: "))

m1=float(n1*1+n2*2+n3*3+n4*4)

media=float(round(m1/4), 2)

print(media)

-- EXECUTION TIME:
0.213972
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/2043/main.py", line 8, in <module>
    media=float(round(m1/4), 2)
TypeError: float() takes at most 1 argument (2 given)

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 21:58:25) 
-- CODE:
n1=float(input("NOta1: "))
n2=float(input("NOta2: "))
n3=float(input("NOta3: "))
n4=float(input("NOta4: "))

m1=float(n1*1+n2*2+n3*3+n4*4)

media=float(round(m1/4), 1)

print(media)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    media=float(round(m1/4), 1)
TypeError: float() takes at most 1 argument (2 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 21:58:32) 
-- CODE:
n1=float(input("NOta1: "))
n2=float(input("NOta2: "))
n3=float(input("NOta3: "))
n4=float(input("NOta4: "))

m1=float(n1*1+n2*2+n3*3+n4*4)

media=float(round(m1/4), 1)

print(media)

-- EXECUTION TIME:
0.191271
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/2043/main.py", line 8, in <module>
    media=float(round(m1/4), 1)
TypeError: float() takes at most 1 argument (2 given)

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 21:58:34) 
-- CODE:
n1=float(input("NOta1: "))
n2=float(input("NOta2: "))
n3=float(input("NOta3: "))
n4=float(input("NOta4: "))

m1=float(n1*1+n2*2+n3*3+n4*4)

media=float(round(m1/4), 1)

print(media)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    media=float(round(m1/4), 1)
TypeError: float() takes at most 1 argument (2 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 21:59:37) 
-- CODE:
n1=float(input("NOta1: "))
n2=float(input("NOta2: "))
n3=float(input("NOta3: "))
n4=float(input("NOta4: "))

m1=float(n1*1+n2*2+n3*3+n4*4)

media=float(m1/4)

print(round(media),2)

-- OUTPUT:
20 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 21:59:58) 
-- CODE:
n1=float(input("NOta1: "))
n2=float(input("NOta2: "))
n3=float(input("NOta3: "))
n4=float(input("NOta4: "))

m1=float(n1*1+n2*2+n3*3+n4*4)

media=float(m1/4)

print(round(media),2)

-- EXECUTION TIME:
0.220871
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
20 2
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
18 2
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
20 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 22:00:34) 
-- CODE:
n1=float(input("NOta1: "))
n2=float(input("NOta2: "))
n3=float(input("NOta3: "))
n4=float(input("NOta4: "))

m1=float(n1*1+n2*2+n3*3+n4*4)

media=float(m1/4)

print(round(media),2)

-- OUTPUT:
20 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 22:00:45) 
-- CODE:
n1=float(input("NOta1: "))
n2=float(input("NOta2: "))
n3=float(input("NOta3: "))
n4=float(input("NOta4: "))

m1=float(n1*1+n2*2+n3*3+n4*4)

media=float(m1/4)

print(round(media), 2)

-- OUTPUT:
20 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 22:02:20) 
-- CODE:
n1=float(input("NOta1: "))
n2=float(input("NOta2: "))
n3=float(input("NOta3: "))
n4=float(input("NOta4: "))

m1=float(n1*1+n2*2+n3*3+n4*4)

print(m1)

-- OUTPUT:
82.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 22:03:23) 
-- CODE:
n1=float(input("NOta1: "))
n2=float(input("NOta2: "))
n3=float(input("NOta3: "))
n4=float(input("NOta4: "))

m1=float(n1*1+n2*2+n3*3+n4*4)

print(m1/4)

-- OUTPUT:
20.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 22:04:30) 
-- CODE:
n1=float(input("NOta1: "))
n2=float(input("NOta2: "))
n3=float(input("NOta3: "))
n4=float(input("NOta4: "))

m1=float(n1*1+n2*2+n3*3+n4*4)

print(m1)

-- OUTPUT:
82.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 22:16:54) 
-- CODE:
n1=float(input("NOta1: "))
n2=float(input("NOta2: "))
n3=float(input("NOta3: "))
n4=float(input("NOta4: "))

m1=float(n1*1)
m2=float(n2*2)
m3=float(n3*3)
m4=float(n4*4)
var=float(m1+m2+m3+m4)

formula=print(round(var/4), 2)
-- OUTPUT:
20 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 22:17:08) 
-- CODE:
n1=float(input("NOta1: "))
n2=float(input("NOta2: "))
n3=float(input("NOta3: "))
n4=float(input("NOta4: "))

m1=float(n1*1)
m2=float(n2*2)
m3=float(n3*3)
m4=float(n4*4)
var=float(m1+m2+m3+m4)

formula=print(round(var/4), 2)
-- EXECUTION TIME:
0.198581
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
20 2
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
18 2
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
20 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 22:23:44) 
-- CODE:
n1=float(input("NOta1: "))
n2=float(input("NOta2: "))
n3=float(input("NOta3: "))
n4=float(input("NOta4: "))

m1=float(n1*1)
m2=float(n2*2)
m3=float(n3*3)
m4=float(n4*4)
var=float(round(m1+m2+m3+m4), 2)

formula=print(var/4)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    var=float(round(m1+m2+m3+m4), 2)
TypeError: float() takes at most 1 argument (2 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 22:23:59) 
-- CODE:
n1=float(input("NOta1: "))
n2=float(input("NOta2: "))
n3=float(input("NOta3: "))
n4=float(input("NOta4: "))

m1=float(n1*1)
m2=float(n2*2)
m3=float(n3*3)
m4=float(n4*4)
var=float(round(m1+m2+m3+m4), 2)

formula=print(var/4)
-- EXECUTION TIME:
0.137662
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/2043/main.py", line 10, in <module>
    var=float(round(m1+m2+m3+m4), 2)
TypeError: float() takes at most 1 argument (2 given)

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 22:24:47) 
-- CODE:
n1=float(input("NOta1: "))
n2=float(input("NOta2: "))
n3=float(input("NOta3: "))
n4=float(input("NOta4: "))

m1=float(n1*1)
m2=float(n2*2)
m3=float(n3*3)
m4=float(n4*4)
var=float(round(m1+m2+m3+m4), 2)

print(var)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    var=float(round(m1+m2+m3+m4), 2)
TypeError: float() takes at most 1 argument (2 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 22:25:29) 
-- CODE:
n1=float(input("NOta1: "))
n2=float(input("NOta2: "))
n3=float(input("NOta3: "))
n4=float(input("NOta4: "))

m1=float(n1*1)
m2=float(n2*2)
m3=float(n3*3)
m4=float(n4*4)
var=float(m1+m2+m3+m4)

print(var)
-- OUTPUT:
82.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 22:27:03) 
-- CODE:
n1=float(input("NOta1: "))
n2=float(input("NOta2: "))
n3=float(input("NOta3: "))
n4=float(input("NOta4: "))

m1=float(n1*1)
m2=float(n2*2)
m3=float(n3*3)
m4=float(n4*4)
var=float(m1+m2+m3+m4)

media=(var/4)
print(media)
-- OUTPUT:
20.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 22:28:36) 
-- CODE:
n1=float(input("NOta1: "))
n2=float(input("NOta2: "))
n3=float(input("NOta3: "))
n4=float(input("NOta4: "))

m1=float(n1*1)
m2=float(n2*2)
m3=float(n3*3)
m4=float(n4*4)
var=float(m1+m2+m3+m4)

media=round(var/4), 2
print(media)

-- OUTPUT:
(20, 2)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 22:30:14) 
-- CODE:
n1=float(input("NOta1: "))
n2=float(input("NOta2: "))
n3=float(input("NOta3: "))
n4=float(input("NOta4: "))

m1=float(n1*1)
m2=float(n2*2)
m3=float(n3*3)
m4=float(n4*4)
var=float(m1+m2+m3+m4)

media1=(var/4)
media2=(float(round(media1),2))

print(media2)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    media2=(float(round(media1),2))
TypeError: float() takes at most 1 argument (2 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 22:31:04) 
-- CODE:
n1=float(input("NOta1: "))
n2=float(input("NOta2: "))
n3=float(input("NOta3: "))
n4=float(input("NOta4: "))

m1=float(n1*1)
m2=float(n2*2)
m3=float(n3*3)
m4=float(n4*4)
var=float(m1+m2+m3+m4)

media1=(var/4)
media2=round(float(media1),2)

print(media2)


-- OUTPUT:
20.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 22:32:06) 
-- CODE:
n1=float(input("NOta1: "))
n2=float(input("NOta2: "))
n3=float(input("NOta3: "))
n4=float(input("NOta4: "))

m1=float(n1*1)
m2=float(n2*2)
m3=float(n3*3)
m4=float(n4*4)
var=float(m1+m2+m3+m4)

media1=(var/4)
media2=round(float(media1),2)

media=(media2/4)

print(media)


-- OUTPUT:
5.125
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 22:32:28) 
-- CODE:
n1=float(input("NOta1: "))
n2=float(input("NOta2: "))
n3=float(input("NOta3: "))
n4=float(input("NOta4: "))

m1=float(n1*1)
m2=float(n2*2)
m3=float(n3*3)
m4=float(n4*4)
var=float(m1+m2+m3+m4)

media1=(var/4)
media2=round(float(media1),2)

media=(media2/4)

print(media)


-- EXECUTION TIME:
0.294455
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
5.125
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
4.375
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
4.96
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 22:32:56) 
-- CODE:
n1=float(input("NOta1: "))
n2=float(input("NOta2: "))
n3=float(input("NOta3: "))
n4=float(input("NOta4: "))

m1=float(n1*1)
m2=float(n2*2)
m3=float(n3*3)
m4=float(n4*4)
var=float(m1+m2+m3+m4)

media1=(var/4)
media2=round(float(media1),2)

media=round(media2/4),2)

print(media)


-- ERROR:
File "XXXX", line 15
    media=round(media2/4),2)
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 22:33:28) 
-- CODE:
n1=float(input("NOta1: "))
n2=float(input("NOta2: "))
n3=float(input("NOta3: "))
n4=float(input("NOta4: "))

m1=float(n1*1)
m2=float(n2*2)
m3=float(n3*3)
m4=float(n4*4)
var=float(m1+m2+m3+m4)

media1=(var/4)
media2=round(float(media1),2)

media=round(float(media2/4),2)

print(media)


-- OUTPUT:
5.12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 22:33:58) 
-- CODE:
n1=float(input("NOta1: "))
n2=float(input("NOta2: "))
n3=float(input("NOta3: "))
n4=float(input("NOta4: "))

m1=float(n1*1)
m2=float(n2*2)
m3=float(n3*3)
m4=float(n4*4)
var=float(m1+m2+m3+m4)

media1=(var/4)
media2=round(float(media1),2)

media=round(float(media2/4),1)

print(media)


-- OUTPUT:
5.1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 22:34:11) 
-- CODE:
n1=float(input("NOta1: "))
n2=float(input("NOta2: "))
n3=float(input("NOta3: "))
n4=float(input("NOta4: "))

m1=float(n1*1)
m2=float(n2*2)
m3=float(n3*3)
m4=float(n4*4)
var=float(m1+m2+m3+m4)

media1=(var/4)
media2=round(float(media1),2)

media=round(float(media2/4),1)

print(media)


-- EXECUTION TIME:
0.161696
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
5.1
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
4.4
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
5.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 22:36:14) 
-- CODE:
n1=float(input("NOta1: "))
n2=float(input("NOta2: "))
n3=float(input("NOta3: "))
n4=float(input("NOta4: "))

m1=float(n1*1)
m2=float(n2*2)
m3=float(n3*3)
m4=float(n4*4)
var=float(m1+m2+m3+m4)

media1=(var/4)
media2=round(float(media1),2)

media=float(media2/4)

print(media)


-- OUTPUT:
5.125
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 22:37:02) 
-- CODE:
n1=float(input("NOta1: "))
n2=float(input("NOta2: "))
n3=float(input("NOta3: "))
n4=float(input("NOta4: "))

m1=float(n1*1)
m2=float(n2*2)
m3=float(n3*3)
m4=float(n4*4)
var=float(m1+m2+m3+m4)

media1=(var/4)
media2=round(float(media1),2)

media=float(media2/4)

print(media)


-- EXECUTION TIME:
0.197635
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
5.125
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
4.375
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
4.96
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 22:40:00) 
-- CODE:
n1=float(input("NOta1: "))
n2=float(input("NOta2: "))
n3=float(input("NOta3: "))
n4=float(input("NOta4: "))

m1=float(n1*1)
m2=float(n2*2)
m3=float(n3*3)
m4=float(n4*4)
var=float(m1+m2+m3+m4)

media1=(var/4)
media2=round(float(media1),2)

media=float(media2/1+2+3+4)

print(media)


-- OUTPUT:
29.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 22:43:10) 
-- CODE:
n1=float(input("NOta1: "))
n2=float(input("NOta2: "))
n3=float(input("NOta3: "))
n4=float(input("NOta4: "))

m1=float(n1*1)
m2=float(n2*2)
m3=float(n3*3)
m4=float(n4*4)
var=float(m1+m2+m3+m4)

media1=(var/4)
media2=round(float(media1),2)

media=float(media2/10)

print(media)


-- OUTPUT:
2.05
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 22:44:02) 
-- CODE:
n1=float(input("NOta1: "))
n2=float(input("NOta2: "))
n3=float(input("NOta3: "))
n4=float(input("NOta4: "))

m1=float(n1*1)
m2=float(n2*2)
m3=float(n3*3)
m4=float(n4*4)
var=float(m1+m2+m3+m4)

media1=(var)
media2=round(float(media1),2)

media=float(media2/10)

print(media)


-- OUTPUT:
8.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 22:44:17) 
-- CODE:
n1=float(input("NOta1: "))
n2=float(input("NOta2: "))
n3=float(input("NOta3: "))
n4=float(input("NOta4: "))

m1=float(n1*1)
m2=float(n2*2)
m3=float(n3*3)
m4=float(n4*4)
var=float(m1+m2+m3+m4)

media1=(var)
media2=round(float(media1),2)

media=float(media2/10)

print(media)


-- OUTPUT:
8.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 22:44:35) 
-- CODE:
n1=float(input("NOta1: "))
n2=float(input("NOta2: "))
n3=float(input("NOta3: "))
n4=float(input("NOta4: "))

m1=float(n1*1)
m2=float(n2*2)
m3=float(n3*3)
m4=float(n4*4)
var=float(m1+m2+m3+m4)

media1=(var)
media2=round(float(media1),2)

media=float(media2/10)

print(media)


-- EXECUTION TIME:
0.18151
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.2
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.936
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 22:48:23) 
-- CODE:
n1=float(input("NOta1: "))
n2=float(input("NOta2: "))
n3=float(input("NOta3: "))
n4=float(input("NOta4: "))

m1=float(n1*1)
m2=float(n2*2)
m3=float(n3*3)
m4=float(n4*4)
var=float(m1+m2+m3+m4)

media1=(var)
media2=round(float(media1),2)

media=float(media2/10)

Media_Final=print(float(media)


-- ERROR:
File "XXXX", line 19
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 22:48:45) 
-- CODE:
n1=float(input("NOta1: "))
n2=float(input("NOta2: "))
n3=float(input("NOta3: "))
n4=float(input("NOta4: "))

m1=float(n1*1)
m2=float(n2*2)
m3=float(n3*3)
m4=float(n4*4)
var=float(m1+m2+m3+m4)

media1=(var)
media2=round(float(media1),2)

media=float(media2/10)

Media_Final=float(print(media)


-- ERROR:
File "XXXX", line 19
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 22:48:57) 
-- CODE:
n1=float(input("NOta1: "))
n2=float(input("NOta2: "))
n3=float(input("NOta3: "))
n4=float(input("NOta4: "))

m1=float(n1*1)
m2=float(n2*2)
m3=float(n3*3)
m4=float(n4*4)
var=float(m1+m2+m3+m4)

media1=(var)
media2=round(float(media1),2)

media=float(media2/10)

Media_Final=print(media)


-- OUTPUT:
8.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 22:49:16) 
-- CODE:
n1=float(input("NOta1: "))
n2=float(input("NOta2: "))
n3=float(input("NOta3: "))
n4=float(input("NOta4: "))

m1=float(n1*1)
m2=float(n2*2)
m3=float(n3*3)
m4=float(n4*4)
var=float(m1+m2+m3+m4)

media1=(var)
media2=round(float(media1),2)

media=float(media2/10)

Media_Final=print(media)


-- EXECUTION TIME:
0.162717
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.2
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.936
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 22:53:34) 
-- CODE:
n1=float(input("NOta1: "))
n2=float(input("NOta2: "))
n3=float(input("NOta3: "))
n4=float(input("NOta4: "))

m1=float(n1*1)
m2=float(n2*2)
m3=float(n3*3)
m4=float(n4*4)
var=float(m1+m2+m3+m4)

media2=round(float(var),2)

media=float(media2/10)

Media_Final=print(media)


-- OUTPUT:
8.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 22:53:54) 
-- CODE:
n1=float(input("NOta1: "))
n2=float(input("NOta2: "))
n3=float(input("NOta3: "))
n4=float(input("NOta4: "))

m1=float(n1*1)
m2=float(n2*2)
m3=float(n3*3)
m4=float(n4*4)
var=float(m1+m2+m3+m4)

media2=round(float(var),2)

media=float(media2/10)

Media_Final=print(media)


-- EXECUTION TIME:
0.12437
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.2
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.936
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 22:55:59) 
-- CODE:
n1=float(input("NOta1: "))
n2=float(input("NOta2: "))
n3=float(input("NOta3: "))
n4=float(input("NOta4: "))

m1=float(n1*1)
m2=float(n2*2)
m3=float(n3*3)
m4=float(n4*4)
var=float(m1+m2+m3+m4)

print(var)


-- OUTPUT:
82.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 22:57:21) 
-- CODE:
n1=float(input("NOta1: "))
n2=float(input("NOta2: "))
n3=float(input("NOta3: "))
n4=float(input("NOta4: "))

m1=float(n1*1)
m2=float(n2*2)
m3=float(n3*3)
m4=float(n4*4)
var=float(m1+m2+m3+m4)

md1=(var/10)
print(md1)


-- OUTPUT:
8.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 22:58:23) 
-- CODE:
n1=float(input("NOta1: "))
n2=float(input("NOta2: "))
n3=float(input("NOta3: "))
n4=float(input("NOta4: "))

m1=float(n1*1)
m2=float(n2*2)
m3=float(n3*3)
m4=float(n4*4)
var=float(m1+m2+m3+m4)

md1=(var/10)
media=round(float(md1),2)
print(media)


-- OUTPUT:
8.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 22:58:49) 
-- CODE:
n1=float(input("NOta1: "))
n2=float(input("NOta2: "))
n3=float(input("NOta3: "))
n4=float(input("NOta4: "))

m1=float(n1*1)
m2=float(n2*2)
m3=float(n3*3)
m4=float(n4*4)
var=float(m1+m2+m3+m4)

md1=(var/10)
media=round(float(md1),2)
print(media)


-- EXECUTION TIME:
0.178378
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.2
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.94
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
